--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.0",
     "firebase": "12.6.0",
-    "lucide-react": "0.556.0"
+    "lucide-react": "0.556.0",
+    "ajv": "^8.12.0"
   },
   "devDependencies": {
     "@types/react": "19.0.0",
